# cpp-sia

./: .clang-format  .gitignore  CMakeLists.txt  README.md  sia-config.cmake.in
include/sia/: array.hpp  sia.hpp  sia_impl.hpp
src/: array.cpp  bigint.cpp  bool.cpp  bytearray.cpp  int.cpp  sia.cpp  string.cpp  uint.cpp
tests/: test_array.cpp  test_bigint.cpp  test_bool.cpp  test_bytearray.cpp  test_int.cpp  test_sia.cpp  test_string.cpp  test_uint.cpp
